--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.jboss.qa.appsint</groupId>
-        <artifactId>appsint-demos-deployments</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
 
     <artifactId>custom-scripts</artifactId>
+    <groupId>org.jboss.qa.appsint</groupId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <!-- https://github.com/jboss-developer/jboss-eap-quickstarts/tree/xp-2.0.x/microprofile-config -->
@@ -27,6 +23,7 @@
         <dependency>
             <groupId>jakarta.inject</groupId>
             <artifactId>jakarta.inject-api</artifactId>
+            <version>1.0.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -34,10 +31,24 @@
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_4.0_spec</artifactId>
+            <version>2.0.0.Final</version>
             <scope>provided</scope>
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
